# frenezulo

./: Cargo.toml  LICENSE  README.md  before.txt  test.wasm
crates/frenezulo-macros/: Cargo.toml
crates/frenezulo-macros/src/: lib.rs
services/hello-world-service/: Cargo.toml
services/hello-world-service/src/: main.rs
src/: application.rs  encoding.rs  http.rs  lib.rs  listener.rs  main.rs  module_supervisor.rs  router.rs  service_registry.rs
src/application/: listener.rs  router.rs
src/application/router/: supervisor.rs
