[package]
name = "hello-world-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frenezulo = { path = "../frenezulo", version = "0.1.0" }
lunatic = "0.11.1"
serde_bytes = "0.11.7"

[patch.crates-io]
lunatic = { path = "../lunatic-rs"}